# KU_Secretary

./: .env.example  .gitignore  AGENTS.md  HANDOFF_TO_CODEX.md  LICENSE  PROJECT_CONTEXT.md  README.md  config.beta.example.toml  config.example.toml  pyproject.toml  setup.py
docs/: AUDIT.md  BETA_PROD_PARITY_CHECKLIST_KO.md  BETA_RELEASE_CHECKLIST_KO.md  BOT_ASSISTANT_QWEN35_PLAN_KO.md  BOT_COMMAND_POLICY_KO.md  FEATURES_AND_IMPLEMENTATION_KO.md  LMS_EXPANSION_PLAN_KO.md  PUBLIC_RELEASE_SECURITY_PLAN_KO.md  REFACTOR_EXECUTION_PLAN_KO.md  SCHOOL_ACCOUNT_PORTALS_KO.md  SNAPSHOT.md  audit.json  snapshot.json
scripts/: cross_check_live.py  e2e_telegram_smoke.py  sanitize_release.py
tests/: test_assistant_executor.py  test_assistant_planner.py  test_assistant_registry.py  test_assistant_runs.py  test_beta_critical_path.py  test_cli_output_shapes.py  test_dashboard_publish.py  test_day_agenda_state.py  test_day_brief_cache.py  test_day_brief_queries.py  test_db_repos.py  test_db_upserts.py  test_google_calendar_sync.py  test_ku_courses_connector.py  test_ku_kupid_timetable_adapter.py  test_ku_library_connector.py  test_ku_lms_connector.py  test_ku_notices_connector.py  test_ku_portal_auth_connector.py  test_ku_timetable_connector.py  test_llm_parser.py  test_local_llm_provider.py  test_material_downloader.py  test_material_extraction.py  test_notification_policies.py  test_onboarding_service.py  test_ops_dashboard.py  test_p0_config_path_resolution.py  test_p1_ack_identity_cli.py  test_p1_identity_gate.py  test_p2_docs_artifacts_cli.py  test_p2_doctor_runtime_checks.py  (+44 more)
(+76 files in other folders)
